--- a/learnview-api/src/main/resources/application.yaml
+++ b/learnview-api/src/main/resources/application.yaml
@@ -1,19 +1,6 @@
-
-spring:
-  data:
-    mongodb:
-      host: localhost
-      port: 27017
-      database: learnview 
-  thymeleaf: 
-    cache: false
-
-load:
-  path: ./load
-        
 server:
   port: 9000
-
+   
 info:
   app:
    name: LearnView
@@ -48,3 +35,34 @@ management:
           - info
           - metrics
           - mappings
+          
+spring:
+ profiles:
+   active: development
+--- 
+spring:
+   config:
+        activate:
+            on-profile: development
+   data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: learnview
+load:
+  path: ./load        
+--- 
+spring:
+   config:
+        activate:
+            on-profile: docker
+   data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: learnview   
+load:
+  path: /usr/local/lib/load/         
+---    
+  thymeleaf: 
+    cache: false
