--- a/learnview-front/package.json
+++ b/learnview-front/package.json
@@ -31,7 +31,7 @@
     "file-loader": "^1.1.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "vue-loader": "^13.0.5",
+    "vue-loader": "https://github.com/graux/vue-loader#a0d6b77",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
