--- a/learnview-front/.gitignore
+++ b/learnview-front/.gitignore
@@ -1,12 +1,30 @@
 .DS_Store
 node_modules/
+v2/node_modules/
+v2/dist/
 dist/
-npm-debug.log
-yarn-error.log
+
+.DS_Store
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
 # Editor directories and files
 .idea
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
+*.sw?
+
+
